Fix card/collection delete links causing titles to wrap on hover.

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -23,14 +23,14 @@ body {
 /* Card delete links */
 .card, .collection-item {
     .delete-link {
-        display: none;
+        visibility: hidden;
         color: inherit;
         cursor: pointer;
     }
 
     &:hover {
         .delete-link {
-            display: block;
+            visibility: visible;
         }
     }
 
